# TestBuilderGtk4Vala

./: .gitignore  README.md  build-flatpak.sh  com.example.test.builder.gtk4.vala.json  create-exe.bat  meson.build
data/: com.example.test.builder.gtk4.vala.appdata.xml.in  com.example.test.builder.gtk4.vala.desktop.in  com.example.test.builder.gtk4.vala.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  testbuildergtk4vala.gresource.xml  window.ui  window.vala
